--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.3",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
